--- a/Back/Aplication/Aplication.csproj
+++ b/Back/Aplication/Aplication.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Domain.Model\Domain.Model.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Transversal\Transversal.csproj" />
   </ItemGroup>
 
 </Project>
