--- a/Back/Infrastructure/Infrastructure.csproj
+++ b/Back/Infrastructure/Infrastructure.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain.Model\Domain.Model.csproj" />
+    <ProjectReference Include="..\Transversal\Transversal.csproj" />
   </ItemGroup>
 
 </Project>
