--- a/Front/WebSeries/package.json
+++ b/Front/WebSeries/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^19.2.0",
     "bootstrap": "^5.3.3",
     "ngx-toastr": "^19.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
