--- a/Back/WebSeries/appsettings.json
+++ b/Back/WebSeries/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection" : "Server=DESKTOP-9G8AR69;Database=projectDB;Trusted_Connection=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=tcp:webseriesinstance.database.windows.net,1433;Initial Catalog=projectDB;Persist Security Info=False;User ID=adminVale;Password=Vale123*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
