--- a/Back/WebSeries/appsettings.Development.json
+++ b/Back/WebSeries/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:webseriesinstance.database.windows.net,1433;Initial Catalog=projectDB;Persist Security Info=False;User ID=adminVale;Password=Vale123*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
