--- a/Front/WebSeries/web.config
+++ b/Front/WebSeries/web.config
@@ -3,18 +3,15 @@
   <system.webServer>
     <rewrite>
       <rules>
-        <rule name="Angular Routes" stopProcessing="true">
+        <rule name="SPA" stopProcessing="true">
           <match url=".*" />
           <conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
           </conditions>
-          <action type="Rewrite" url="index.html" />
+          <action type="Rewrite" url="/" />
         </rule>
       </rules>
     </rewrite>
-    <staticContent>
-      <mimeMap fileExtension=".json" mimeType="application/json" />
-    </staticContent>
   </system.webServer>
 </configuration>
